Alembic export: crash when file is in use by another application #78758

Closed
opened 2020-07-09 11:50:32 +02:00 by Marcus Papathoma · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: 31bc76ea4e
Worked: 2.83.1
Short description of error
Blender crashes if you are exporting an alembic file and want to save over a abc file that is currently in use (linked) by an other application. In my case this is Clarisse ifx.
Previous Blender Version (2.83.1) printed an error message but didn´t crashed.
Alembic_Error_Message.jpg
Error Message form Blender 2.83.1

Exact steps for others to reproduce the error
Create an alembic file.
Link it into another application so that it is in use.
Try to save over that alembic file by exporting an alembic from blender.
Blender crashes.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-08 20:30, hash: `31bc76ea4e` Worked: 2.83.1 **Short description of error** Blender crashes if you are exporting an alembic file and want to save over a abc file that is currently in use (linked) by an other application. In my case this is Clarisse ifx. Previous Blender Version (2.83.1) printed an error message but didn´t crashed. ![Alembic_Error_Message.jpg](https://archive.blender.org/developer/F8680521/Alembic_Error_Message.jpg) Error Message form Blender 2.83.1 **Exact steps for others to reproduce the error** Create an alembic file. Link it into another application so that it is in use. Try to save over that alembic file by exporting an alembic from blender. Blender crashes.

Added subscriber: @machieb

Added subscriber: @machieb

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot really test here, all I can say is that this is working fine within blender (importing the exported .abc into another instance of blender have it looping there, and exporting/overwriting from the other blender instance will not crash any of them -- it does break the playback though...)

Cannot really test here, all I can say is that this is working fine within blender (importing the exported .abc into another instance of blender have it looping there, and exporting/overwriting from the other blender instance will not crash any of them -- it does break the playback though...)

Closed as duplicate of #76412

Closed as duplicate of #76412

The Alembic library doesn't handle this properly. Blender could close the file as soon as it has stopped reading from it, but this would require quite some work to still maintain performance.

The Alembic library doesn't handle this properly. Blender could close the file as soon as it has stopped reading from it, but this would require quite some work to still maintain performance.

Changed status from 'Duplicate' to: 'Needs Triage'

Changed status from 'Duplicate' to: 'Needs Triage'

I closed this task to quickly, as this is about exporting, not importing.

I closed this task to quickly, as this is about *exporting*, not importing.

As I wrote in my description, it was working in Blender 2.83.1. The error message is above. Now there is now errror message, Blender crashes to the desktop.

As I wrote in my description, it was working in Blender 2.83.1. The error message is above. Now there is now errror message, Blender crashes to the desktop.
Sybren A. Stüvel changed title from Alembic export - Blender crashes when file is in use by another application to Alembic export: crash when file is in use by another application 2020-08-04 15:20:46 +02:00

This issue was referenced by e8483f9bd7

This issue was referenced by e8483f9bd721f93ec8c21fb339a518096042537d
Sybren A. Stüvel self-assigned this 2020-08-04 15:24:11 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78758
No description provided.