Fix T78758 Alembic export: crash when file is in use by another application

In cases when the output file cannot be opened, an exception is thrown that
was not caught.